--- a/Flask/templates/home.html
+++ b/Flask/templates/home.html
@@ -6,4 +6,12 @@
   and my many skills. Until I can figure out better contant you will have
   to do with what I have here :)</p>
 </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <h3>Projects worked on</h3>
+      <p>I have built a lot of stuff, but give me time to put it on here. I promise
+      I have done a lot of stuff... mainly in delphi.</p>
+    </div>
+  </div>
 {% endblock %}
