--- a/Flask/templates/home.html
+++ b/Flask/templates/home.html
@@ -3,7 +3,7 @@
 <div class="jumbotron">
   <h1>Hello, World!</h1>
   <p>Welcome to my personal website where I am suppose to talk about myself
-  and my many skills. Until I can figure out better contant you will have
+  and my many skills. Until I can figure out better content you will have
   to do with what I have here :)</p>
 </div>
 
