Build out home page and objective statements

--- a/solthoth/src/app/app.component.html
+++ b/solthoth/src/app/app.component.html
@@ -1,4 +1,14 @@
 <main>
+  <header>
+    <mat-toolbar>
+      <span>Carlos Barajas</span>
+      <span class="toolbar-spacer"></span>
+      <div class="socials-button-row">
+        <a mat-button href="https://github.com/solthoth">GitHub</a>
+        <a mat-button href="https://www.linkedin.com/in/solthoth/" target="_blank">LinkedIn</a>
+      </div>
+    </mat-toolbar>
+  </header>
   <section class="content">
     <router-outlet></router-outlet>
   </section>
