define job details for work experience

--- a/solthoth/src/app/home/home.component.html
+++ b/solthoth/src/app/home/home.component.html
@@ -38,5 +38,5 @@
     </mat-card>
 </section>
 <section>
-    <app-job *ngFor="let job of jobList" [job]="job"></app-job>
+    <app-job *ngFor="let job of homeJobList" [job]="job"></app-job>
 </section>
