--- a/solthoth/src/app/job/job.component.html
+++ b/solthoth/src/app/job/job.component.html
@@ -2,8 +2,20 @@
     <mat-card>
         <mat-card-header>
             <mat-card-title>{{job.title}} - <a href="{{job.companyLink}}">{{job.companyName}}</a></mat-card-title>
-            <mat-card-subtitle></mat-card-subtitle>
+            <mat-card-subtitle>{{ job.dateRange  }}</mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content></mat-card-content>
+        <mat-card-content>
+            <mat-list>
+            @for (detail of job.details; track detail) {
+                <mat-list-item>
+                    <mat-icon matListItemIcon>note</mat-icon>
+                    <div matListItemTitle>{{detail}}</div>
+                </mat-list-item>
+            }
+            </mat-list>
+        </mat-card-content>
+        <mat-card-actions>
+            <a [routerLink]="['/details', job.id]">Learn More</a>
+        </mat-card-actions>
     </mat-card>
 </section>
